[package]
name = "vmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
nix = { version = "0.27.1", features = ["fs", "mman", "ioctl"] }

[build-dependencies]
bindgen = "0.69.2"
